tests/fixtures/errors/e0401_connection_width.mimz
// expect: E0401
module Child {
  in a: bits[8]
  out z: bits[8]
  z = a
}
module M {
  in x: bits[4]
  out y: bits[8]
  let c = Child() { a: x }
  y = c.z
}
